Updated the index.html  with new input fields amd added  some styling

--- a/bluestyle.css
+++ b/bluestyle.css
@@ -6,3 +6,9 @@ body {
     color: navy;
     margin-left: 20px;
     }
+    p{
+
+        background-color: pink;
+        font-weight: bolder;
+        font-size: 100px;
+    }
